--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             <div class="header-tel">
                 <a class="header-tel-icon" href="#"><i class="fa-solid fa-phone"></i></a>
-                +38 098 228 45 69
+                <span class="header-tel-text">+38 098 228 45 69</span>
             </div>
 
 
@@ -37,6 +37,8 @@
                     ukraine
                 </div>
             </a>
+
+            <div class="burger-menu"><i class="fa-solid fa-bars"></i></div>
             
         </div>
 
