--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
         </div>
 
         <div class="partners-list">
-            <img class="partners-item" src="images/partner1.png" alt="">
-            <img class="partners-item" src="images/partner2.png" alt="">
-            <img class="partners-item" src="images/partner3.png" alt="">
-            <img class="partners-item" src="images/partner4.png" alt="">
+            <div class="partners-item"><img  src="images/partner1.png" alt=""></div>
+            <div class="partners-item"><img src="images/partner2.png" alt=""></div>
+            <div class="partners-item"><img src="images/partner3.png" alt=""></div>
+            <div class="partners-item"><img src="images/partner4.png" alt=""></div>
         </div>
 
 
