--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="format-detection" content="telephone=no">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@400;700&family=Marmelad&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@400;700&family=Marmelad&display=swap" rel="stylesheet">-->
     <link rel="stylesheet" href="css/styles.css">
     <title>LosMedical</title>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Antonio:wght@400;700&family=Marmelad&display=swap');
+    </style>
+
 </head>
 <body>
     
