--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <div class="call-iner">
             <form action="/" method="post" class="call-form">
-                <input class="call-input" type="text" name="number" id="number" placeholder="+380 (___) ___ __ __">
+                <input class="call-input" type="tel" name="number" id="number" placeholder="+380 (___) ___ __ __">
                 <button class="call-button" type="submit">Зателефонувати мені</button>
             </form>
 
