--- a/contacts.html
+++ b/contacts.html
@@ -138,6 +138,8 @@
     </div><!--/.container-->
 </footer><!--/.footer-->
 
+
+<script src="js/inputmask.min.js"></script>
 <script src="js/javascripts.js"></script>
 <script src="https://kit.fontawesome.com/eb125d246d.js" crossorigin="anonymous"></script>
 
