--- a/doctors.html
+++ b/doctors.html
@@ -174,7 +174,7 @@
 
 
 
-
+<script src="js/inputmask.min.js"></script>
 <script src="js/javascripts.js"></script>
 <script src="https://kit.fontawesome.com/eb125d246d.js" crossorigin="anonymous"></script>
 
