--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <div class="call-iner">
             <form action="/" method="post" class="call-form">
-                <input class="call-input" type="tel" name="number" id="number" placeholder="+380 (___) ___ __ __">
+                <input class="call-input" type="tel" name="number" id="number" placeholder="38 (___) ___ __ __">
                 <button class="call-button" type="submit">Зателефонувати мені</button>
             </form>
 
@@ -261,19 +261,9 @@
 </footer><!--/.footer-->
 
 
+<script src="js/inputmask.min.js"></script>
 <script src="js/javascripts.js"></script>
-<!--jquery for input mask-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/eb125d246d.js" crossorigin="anonymous"></script>
-<!-- load maskedinput.js-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js" integrity="sha512-yVcJYuVlmaPrv3FRfBYGbXaurHsB2cGmyHr4Rf1cxAS+IOe/tCqxWY/EoBKLoDknY4oI1BNJ1lSU2dxxGo9WDw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-<!--input mask script-->
-<script type="text/javascript">
-    jQuery(function($){
-    $("#number").mask("+380 (999) 999 99 99");
-    });
- </script>
 
 </body>
 </html>
